--- a/src/app/common/components/modals/HeaderLogin/HeaderLoginModal.styles.scss
+++ b/src/app/common/components/modals/HeaderLogin/HeaderLoginModal.styles.scss
@@ -23,6 +23,11 @@
       &:hover {
         background-color: c.$modal-hover-color;
       }
+      .ant-modal-close-x {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
