--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -18,12 +18,17 @@
     }
 
     .ant-modal-close {
-      @include mut.positioned-as(absolute, $left: 94%, $top: -25px);
-      @include mut.circular(80px, c.$pure-white-color);
+      @include mut.positioned-as(absolute, $left: 94%, $top: -27px);
+      @include mut.circular(90px, c.$pure-white-color);
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
       &:hover {
         background-color: c.$modal-hover-color;
+      }
+      .ant-modal-close-x {
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
@@ -80,6 +85,7 @@
 
       &:where(:hover, &.active) {
         background-color: c.$accented-red-color;
+        border: 3px solid c.$accented-red-color;
 
         > span {
           color: c.$pure-white-color;
