--- a/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Map/Map.styles.scss
@@ -2,9 +2,23 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .mapContainer {
-    @include mut.sized(1600px, 872px);
-}
-
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+  }
+  
 .mapCentered {
     @include mut.flex-centered();
 }
+
+.leaflet-control-container {
+    position: absolute;
+    bottom: 10px;
+    left:1px;
+}
+
+.custom-zoom-control {
+    position: absolute;
+    top: 100rem;
+    left: 100rem;
+  }
