--- a/src/features/StreetcodePage/MapBlock/Statistics/Statistics.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Statistics/Statistics.styles.scss
@@ -4,17 +4,17 @@
 @use '@sass/variables/variables.colors' as c;
 
 .statisticsContainer{
-  @include mut.sized(428px, 262px);
-  @include mut.positioned-as(absolute, 636px, 0, 0, 150px);
+  @include mut.sized(317px, 414px);
+  @include mut.positioned-as(absolute, 0px, 0, 100px, 0px);
   @include mut.rem-padded(5px, 5px, 5px, 5px);
   background: c.$pure-white-color;
   z-index: 2;
-  border: 3px solid #787878;
+  // border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
 
   h1{
-    @include mut.with-font(ft.$roboto-font, 500, 22px, normal);
+    @include mut.with-font(ft.$roboto-font, 500, 20px, normal);
     line-height: 26px;
     @include mut.rem-padded(20px, 20px, 0, 20px);
     color: c.$accented-red-color;
@@ -36,3 +36,4 @@
     }
   }
 }
+
