--- a/src/app/common/components/modals/Tags/TagsModal.styles.scss
+++ b/src/app/common/components/modals/Tags/TagsModal.styles.scss
@@ -16,6 +16,18 @@ $articlesImg: "@assets/images/sources/Articles.png";
       padding: 0 !important;
       @include mut.full-rounded(70px, $overflow: visible);
     }
+    .ant-modal-close {
+      @include mut.positioned-as(absolute, $left: 94%, $top: -10px);
+      @include mut.circular(80px, c.$pure-white-color);
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      @include mut.sized(83px, 80px);
+      &:hover {
+        background-color: c.$modal-hover-color;
+      }
+    }
+    span.ant-modal-close-x{
+      max-height: f.pxToRem(28px);
+    }
   }
 }
 
