--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -16,6 +16,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
       height: pxToRem(698px);
       @include mut.full-rounded(70px, $overflow: visible);
 
+
       padding: 0 !important;
       box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
                   0 6px 20px 0 rgb(0 0 0 / 19%);
@@ -25,6 +26,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
       @include mut.positioned-as(absolute, $left: 93%, $top: -25px);
       @include mut.circular(80px, c.$pure-white-color);
 
+      display: inline;
       &:hover {
         background-color: c.$modal-hover-color;
       }
@@ -54,55 +56,77 @@ $articlesImg: "@assets/images/sources/Articles.png";
   @include mut.rem-padded(30px, 0, 30px, 3px);
 
    .relatedFigureSlide:hover {
-      //@include mut.sized($width: 278px, $height: 380px);
       overflow: visible !important;
-
       .figureSlideText{
-          @include mut.sized($width: 272px, $height: 97px);
-          //@include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
+          @include mut.sized($width: 278px, $height: 97px);
+          @include mut.flexed($align-items: flex-start, $wrap: wrap);
+          @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
+      
+      
+          align-content: flex-start;
+      
+          background-color: c.$dark-red-color;
+      
+          @include vnd.vendored(transition, 'all .5s ease');
         }
-        .relatedTagList {
-          animation: fadeIn 1s;
-          box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);    
-          z-index: 10 !important;
-          position: absolute;
-          //width: max-content !important;
-          width: 130px !important;
-          //display: inline-block;
-          left: 175px;
-          top: 58px;
-          padding: 15px;
-        
-          background-color: c.$pure-white-color;
-          border-radius: 20px;
+      
+          .relatedTagList {
+            animation: fadeIn 1s;
+            box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);    
+             z-index: 1  !important;
+            position: absolute;
+            box-sizing: border-box;
+            width: 130px !important;
+            left: 160px;
+            top: 58px;
+            padding: 15px;
+          
+            background-color: c.$pure-white-color;
+            border-radius: 20px;
+  
+            visibility: visible;
 
-          visibility: visible;
-            .tag {
-              @include mut.sized($height: 28px);
-              @include mut.flex-centered();
-              gap: 0 !important;
-              border: 2px solid c.$dark-red-color;
-              @include mut.full-rounded($rad: 7.86px);
-              padding: 5.5px 9.5px !important;
-              //@include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
-              @include mut.rem-margined($left: 1.5px, $top: 1.5px, $right: 1.5px, $bottom: 2px);
-      
-      
-              p {
-                @include mut.sized($height: 14px);
-                text-align: center;
-                line-height: 135.69%;
-      
-                @include mut.with-font($font-size: 10px,$font-weight: 500);
-                line-height: pxToRem(13.6px);
-                color: c.$dark-red-color;
-              }
-            }
+              .tag {
+                @include mut.sized($height: 28px);
+                @include mut.flex-centered();
+                gap: 0 !important;
+                border: 2px solid c.$dark-red-color;
+                @include mut.full-rounded($rad: 7.86px);
+                padding: 5.5px 9.5px !important;
+                @include mut.rem-margined($left: 1.5px, $top: 1.5px, $right: 1.5px, $bottom: 2px);
         
+                p {
+                  @include mut.sized($height: 14px);
+                  text-align: center;
+                  line-height: 135.69%;
+        
+                  @include mut.with-font($font-size: 10px,$font-weight: 500);
+                  line-height: pxToRem(13.6px);
+                  color: c.$dark-red-color;
+                }
+              }
+              &::after {    
+
+                content: "";
+                 position: absolute;
+                 width: 0;
+                 height: 0;
+                 margin-left: -3em;
+                 bottom: -25px;
+                 left: 50%;
+                 box-sizing: border-box;
+                 z-index: -1 !important;
+                 border: 1em solid black;
+                 border-color: transparent transparent #FFFFFF #FFFFFF;
+                 
+                 transform-origin: 0 0;
+                 transform: rotate(-45deg);
+                 box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.25);
+                }
+          
       } 
    }
 
- 
 
   &::-webkit-scrollbar {
     width: .765rem;
