Changed styles in the Tags modal and Related figures modal. Fixed problems that appeared after merge

--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -4,6 +4,8 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/_utils.functions.scss" as fnc;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@sass/_utils.functions.scss" as f;
+
 
 $bookImg: "@assets/images/sources/Books_stretched.png";
 $articlesImg: "@assets/images/sources/Articles.png";
@@ -30,6 +32,9 @@ $articlesImg: "@assets/images/sources/Articles.png";
       &:hover {
         background-color: c.$modal-hover-color;
       }
+      span.ant-modal-close-x{
+        max-height: f.pxToRem(28px);
+      }
     }
   }
 }
@@ -47,7 +52,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
   }
 }
 
-.relatedFiguresContentContainer {
+.relatedFiguresReadMoreContentContainer {
   height: pxToRem(598px);
   @include mut.flexed($direction: row, $gap: 30px, $wrap: wrap);
 
@@ -56,77 +61,77 @@ $articlesImg: "@assets/images/sources/Articles.png";
   @include mut.rem-padded(30px, 0, 30px, 3px);
 
    .relatedFigureSlide:hover {
+      @include mut.sized($width: 278px, $height: 380px);
+      @include mut.full-rounded($rad: 30px);
+      border: 3px solid c.$pure-white-color;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-size: 100%;
+      background-repeat: no-repeat;
+
+      @include mut.positioned-as();
+      @include mut.flexed($justify-content: center, $align-items: flex-end);
+
+      @include vnd.vendored(transition, 'all .5s ease');
+      cursor: pointer;
+
       overflow: visible !important;
       .figureSlideText{
-          @include mut.sized($width: 278px, $height: 97px);
-          @include mut.flexed($align-items: flex-start, $wrap: wrap);
-          @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
-      
-      
-          align-content: flex-start;
-      
-          background-color: c.$dark-red-color;
-      
-          @include vnd.vendored(transition, 'all .5s ease');
-        }
-      
-          .relatedTagList {
-            animation: fadeIn 1s;
-            box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);    
-             z-index: 1  !important;
-            position: absolute;
-            box-sizing: border-box;
-            width: 130px !important;
-            left: 160px;
-            top: 58px;
-            padding: 15px;
-          
-            background-color: c.$pure-white-color;
-            border-radius: 20px;
-  
-            visibility: visible;
+        @include mut.sized($width: 278px, $height: 97px);
+        @include mut.flexed($align-items: flex-start, $wrap: wrap);
+        @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
+        align-content: flex-start;
+        background-color: c.$dark-red-color;
+        @include vnd.vendored(transition, 'all .5s ease');
+      }
+      .relatedTagList {
+        animation: fadeIn 1s;
+        box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);    
+        z-index: 1  !important;
+        position: absolute;
+        box-sizing: border-box;
+        width: 130px !important;
+        left: 160px;
+        top: 58px;
+        padding: 15px;
+        background-color: c.$pure-white-color;
+        border-radius: 20px;
+        visibility: visible;
+        .tag {
+          @include mut.sized($height: 28px);
+          @include mut.flex-centered();
+          gap: 0 !important;
+          border: 2px solid c.$dark-red-color;
+          @include mut.full-rounded($rad: 7.86px);
+          padding: 5.5px 9.5px !important;
+          @include mut.rem-margined($left: 1.5px, $top: 1.5px, $right: 1.5px, $bottom: 2px);
+          p{
+            @include mut.sized($height: 14px);
+            text-align: center;
+            line-height: 135.69%;
+            @include mut.with-font($font-size: 10px,$font-weight: 500);
+            line-height: pxToRem(13.6px);
+            color: c.$dark-red-color;
+          }
+         }
+        &::after {    
 
-              .tag {
-                @include mut.sized($height: 28px);
-                @include mut.flex-centered();
-                gap: 0 !important;
-                border: 2px solid c.$dark-red-color;
-                @include mut.full-rounded($rad: 7.86px);
-                padding: 5.5px 9.5px !important;
-                @include mut.rem-margined($left: 1.5px, $top: 1.5px, $right: 1.5px, $bottom: 2px);
-        
-                p {
-                  @include mut.sized($height: 14px);
-                  text-align: center;
-                  line-height: 135.69%;
-        
-                  @include mut.with-font($font-size: 10px,$font-weight: 500);
-                  line-height: pxToRem(13.6px);
-                  color: c.$dark-red-color;
-                }
-              }
-              &::after {    
-
-                content: "";
-                 position: absolute;
-                 width: 0;
-                 height: 0;
-                 margin-left: -3em;
-                 bottom: -25px;
-                 left: 50%;
-                 box-sizing: border-box;
-                 z-index: -1 !important;
-                 border: 1em solid black;
-                 border-color: transparent transparent #FFFFFF #FFFFFF;
-                 
-                 transform-origin: 0 0;
-                 transform: rotate(-45deg);
-                 box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.25);
-                }
-          
+          content: "";
+          position: absolute;
+          width: 0;
+          height: 0;
+          margin-left: -3em;
+          bottom: -25px;
+          left: 50%;
+          box-sizing: border-box;
+          z-index: -1 !important;
+          border: 1em solid black;
+          border-color: transparent transparent #FFFFFF #FFFFFF;       
+          transform-origin: 0 0;
+          transform: rotate(-45deg);
+          box-shadow: -3px 3px 3px 0 rgba(0, 0, 0, 0.25);
+        }  
       } 
    }
-
 
   &::-webkit-scrollbar {
     width: .765rem;
