--- a/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Statistics/Info.styles.scss
@@ -6,11 +6,7 @@
 
 .infoContainer{
     @include mut.sized(80px,76px);
-   
-    position: absolute;
-    top: 195px;
-    left: 67%;
-    transform: translateX(-50%);
+    @include mut.positioned-as(absolute, 0, 0, 0, 105%);
     z-index: 2;
     background: c.$pure-white-color;
     // border: 3px solid #787878;
@@ -32,4 +28,17 @@
     @include mut.positioned-as(absolute, 20%, 0, 0, 0);
     color: c.$accented-red-color;
   }
+  .transparent-popover .ant-popover-inner {
+    @include mut.sized(317px, 414px);
+    @include mut.positioned-as(absolute, 0px, 0, 100px, 0px);
+    @include mut.rem-padded(5px, 5px, 5px, 5px);
+    background: c.$pure-white-color;
+    z-index: 2;
+     // border: 3px solid #787878;
+    box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    
+    
+  }
  
+  
