--- a/src/features/AdminPage/MainBlock/MainBlockAdmin.style.scss
+++ b/src/features/AdminPage/MainBlock/MainBlockAdmin.style.scss
@@ -1,5 +1,6 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
+@use "@sass/_utils.functions.scss" as f;
 .mainblock-add-form{
    .ant-form-item-label>label{
         @include mut.with-font();
@@ -10,6 +11,9 @@
     }
     .ant-select, .ant-select-selector,.ant-select-selection-search-input,.ant-select-selection-search-input{
         @include mut.with-font();
+    }
+    .tags-select-input{
+        width:f.pxToRem(200px) ;
     }
     
 }
