--- a/src/features/AdminPage/PageBar/PageBar.styles.scss
+++ b/src/features/AdminPage/PageBar/PageBar.styles.scss
@@ -21,7 +21,7 @@
 
     span {
         &:hover {
-            scale: 1.1;
+            transform: scale(1.1);
             cursor: pointer;
         }
 
