--- a/src/app/common/components/modals/Tags/TagsSliderModal/TagsSliderModal.styles.scss
+++ b/src/app/common/components/modals/Tags/TagsSliderModal/TagsSliderModal.styles.scss
@@ -6,20 +6,26 @@
   @include mut.rem-padded(13px, 13px, 13px, 20px);
   @include mut.flexed($align-items: flex-start, $wrap: wrap, $gap: 5px);
   width: 70%;
-    &.tagSliderClass{
-    &.sliderClass{
-      width: 100% !important;
-      background-color: #fff;
-    }
-    &.slick-track {
-      @include mut.rem-margined();
-    }
-    &.slick-initialized{
-      position: relative;
-        width: 100%;
-        padding: 0px 100px;
-      }
+  .sliderClass{
+    width: 100% !important;
+    height: 100px;
+    vertical-align: middle;
   }
+  .slick-list {
+    padding: 20px; 
+  }
+  .slick-track {
+    padding-top: 3px;
+  }
+  .slick-initialized{
+    position: relative;
+    top: 30%;
+  }
+  div.slick-current{
+    height: 100px;
+    vertical-align: middle;
+  }
+  
   .tagModalItem {
     height: f.pxToRem(38px);
     @include mut.flex-centered();
