--- a/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
@@ -61,7 +61,7 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
     
 
     // .slick-current + .slick-slide {
-    .slick-center {
+    .slick-current {
       border-radius: 40px;
       box-shadow: inset  0px 0px 2px 6px c.$pure-white-color;
 
