--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -79,13 +79,15 @@ $articlesImg: "@assets/images/sources/Articles.png";
       }
       .relatedTagList {
         animation: fadeIn 1s;
-        box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);    z-index: 10 !important;
+        box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);   
+        z-index: 10 !important;
         position: absolute;
-        width: 54% !important;
+        width: 53% !important;
         left: 145px;
         top: 58px;
-        justify-content: left;
-        @include mut.rem-padded($left: 8px, $top: 10.5px, $right: 4px, $bottom: 10.5px);
+        justify-content: center;
+        // Can be usefull in future editing -> @include mut.rem-padded($left: 8px, $top: 10.5px, $right: 4px, $bottom: 10.5px);
+        @include mut.rem-padded($left: 15px, $top: 10px, $right: 15px, $bottom: 10px);
 
         background-color: c.$pure-white-color;
         border-radius: 20px;
