--- a/src/features/AdminPage/NewStreetcode/HistoryRelations/HistoryRelations.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/HistoryRelations/HistoryRelations.styles.scss
@@ -1,19 +1,12 @@
-.container {
-    width: 60%;
-    max-height: 150px; 
-    margin: 15px 10px;
-    overflow-y: auto;
-}  
-  
-#list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-  
-#list li {
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-    font-size: 14px;
+@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@sass/variables/_variables.fonts.scss" as ft;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/_utils.functions.scss" as f;
 
+.subheading {
+    margin-bottom: 15px;
 }
+
+
+
+
