--- a/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/InterestingFactsBlock.style.scss
+++ b/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/InterestingFactsBlock.style.scss
@@ -2,84 +2,46 @@
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
-
+@use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .navBarContainer{
     position: sticky !important;
 }
 .interestingFactsBlock {
-     @include mut.sized(30%, 100px);
-    @include mut.flex-centered($direction: column);
-    position: absolute;
+  @include mut.sized(60%, 200px);
+  @include mut.flex-centered($direction: column);
+  position: block;
 
-    .heading{
+    .factsHeader{
+        @include mut.sized($width: 100%, $height: 30%);
         font-size: large;
-        padding: 15px;
+        padding: 10px;
         align-items: left;
     }
 
-    // .blockHeadingContainer {
-    //     margin-left: pxToRem(10px);
-    // }
+    .factsContainer{
+        @include mut.sized($width: 100%, $height: 30%);
+        display: flex;
+        gap: 5px;
+
+        .addWowFact{
+            justify-content: center;
+            justify-items: center;
+            display: block;
+            position: flex;
+            @include mut.sized($width:5%,$height: 100%);
+            @include mut.flex-centered();  
+            border: 1.5px solid c.$dark-red-color;
+            @include mut.full-rounded($rad: 7.86px);
+            @include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
+            color: c.$dark-red-color;
+
+            &:hover{
+               cursor: pointer;
+                background-color: c.$dark-red-color;    
+                color: white !important;
+                transition: all .5s ease-out;
+            }
+        }
+    }
 }
-
-// .interestingFactsWrapper {
-//     @include wr.main-page-block-wrapper();
-// }
-
-// .interestingFactsSliderContainer {
-//     @include mut.sized(1220px, 660px);
-
-//     .slick-dots {
-//         @include mut.rem-margined($top:-23px, $left:-30px);
-//     }
-//     .slick-slider{
-//         height: 100%;
-//     }
-// }
-
-// .heightContainer,
-// .slick-list,
-// .slick-track {
-//     height: 100%;
-// }
-
-// .heightContainer {
-//     padding-top: pxToRem(23px);
-// }
-
-// .slick-center .interestingFactSlide {
-//     transform: scale(1.52);
-// }
-
-// .singleSlideContainer{
-//     @include mut.flex-centered();
-//     @include vnd.vendored(transform, scale(1.32));
-//     padding-top:7.5%;
-
-//     .interestingFactSlide{
-//         @include  mut.sized(650px, 600px);
-
-//         .slideImage {
-//             @include mut.sized($height: 60%);
-
-//             img {
-//                 @include mut.sized($width: 100%);
-//             }
-//         }
-
-//         .slideText{
-//             @include mut.sized($height: 40%);
-
-//             .heading{
-//                 font-size:26px;
-//             }
-
-//             .mainText{
-//                 font-size:15px;
-//                 line-height: pxToRem(20px);
-//             }
-//         }
-//     }
-// }
-
