--- a/src/features/AdminPage/MainBlock/DragableTags/DragableTags.styles.scss
+++ b/src/features/AdminPage/MainBlock/DragableTags/DragableTags.styles.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
-    max-width: f.pxToRem(450px) ;
+    width: 100% ;
     flex-wrap: wrap;
 
     .draggable-tag{
