--- a/src/features/AdminPage/NewStreetcode/ForFansBlock/ForFansModal/ForFansModal.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ForFansBlock/ForFansModal/ForFansModal.styles.scss
@@ -4,16 +4,17 @@
 @use "@sass/_utils.functions.scss" as f;
 $articlesImg: "@assets/images/sources/Articles.png";
 
-.ForFansContainer {
+.ForFansModalContainer {
     @include mut.sized(80%);
    
      margin-top: f.pxToRem(85px);
      margin-right: f.pxToRem(50px);
-     float: right;
+     float: center;
      h1 {
         color: white;
         font-weight: 500;
       }
 }
 
+ 
    
