--- a/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/InterestingFactsAdminItem/InterestingFactsAdminItem.style.scss
+++ b/src/features/AdminPage/NewStreetcode/InterestingFactsBlock/InterestingFactsAdminItem/InterestingFactsAdminItem.style.scss
@@ -3,33 +3,57 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 @use "@assets/sass/_utils.functions.scss" as f;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
+$itemWidth: 154px;
 
 .interestingFactItem {
-  @include mut.sized($width: 25%);
+   @include mut.sized($width: $itemWidth);
+  // @include mut.sized($width: 160px);
+  // position: relative;
+  
   
   .item {
-    @include mut.sized($height: 95%);
+    // left: -200px;
+     position:relative;
+    //@include mut.sized($height: 100%);
+    @include mut.sized($height: 50px);
+    //top: 50px;
+    //left: 0;
     @include mut.flex-centered();  
     border: 1.5px solid c.$dark-red-color;
     @include mut.full-rounded($rad: 7.86px);
     @include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
-    
+    // .item:nth-child(4n) {
+
+    // }
+    // //   margin-right: 0;
+  
+
+  //   &:nth-child(7n) {
+  //     display: block;
+  //      clear: both;
+  // }
+    // }
     p {
       text-align: center;
-      line-height: 135.69%;
-      @include mut.with-font($font-size: 15px,$font-weight: 500);
+   //   line-height: 135.69%;
+      @include mut.with-font($font-size: 12px,$font-weight: 500);
       line-height: pxToRem(13.6px);
       color: c.$dark-red-color;
     }
 
     .faIcon {
+      margin: 10px;
       cursor: pointer;
-      display: block;
-      text-align: right;
-      margin: 0 0 0 100%;
+    //  position: static;
+      // display: flex;
+      text-align: center;
+     // margin: 0 0 0 auto;
       color: black;
     }
 
   }
+
+ 
+
 
 }
