--- a/src/features/AdminPage/MainBlock/PopoverForTagContent/PopoverForTagContent.styles.scss
+++ b/src/features/AdminPage/MainBlock/PopoverForTagContent/PopoverForTagContent.styles.scss
@@ -1,11 +1,18 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/_utils.functions.scss" as f;
+.laptop-version{
+  .tagContainer{
+    overflow: hidden;
+        max-height: f.pxToRem(95px);
+  }
+}
 .mobile-version{
     .tagContainer {
         @include mut.rem-padded(13px, 0, 13px, 3px);
         @include mut.flexed($align-items: flex-start, $wrap: wrap, $gap: 5px);
-      
+        overflow: hidden;
+        max-height: f.pxToRem(90px);
         .tagItem {
           height: f.pxToRem(34px);
           @include mut.flex-centered();
@@ -17,6 +24,7 @@
           border: 2px solid c.$accented-red-color;
           @include mut.with-font($font-weight: bold, $font-size: 14px);
           line-height: f.pxToRem(16px);
+  
       
           &:hover {
             color: c.$dark-red-color;
