--- a/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextForm.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextForm.styles.scss
@@ -22,40 +22,19 @@
         font-family: ft.$roboto-font;
     }
 
-    textarea {
+    #main-text-selection-area{
         font-family: ft.$roboto-font;
         height: f.pxToRem(200px);
         padding: f.pxToRem(10px);
         resize: none;
     }
 
-    input{
-        padding: f.pxToRem(10px);
-        font-family: ft.$roboto-font;
-
-        &::placeholder {
-            font-size: small;
-            color: c.$dark-red-color;
-            opacity: 50%;
-        }
-    }
-
     .smaller-input{
         width: 65%;
     }
 
-    .preview {
-        height: f.pxToRem(180px);
-        width: f.pxToRem(320px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: f.pxToRem(10px);
-        border: 2px solid c.$dark-red-color;
-        
-        p{
-            color: black;
-        }
+    .ant-input-show-count-suffix{
+        position: relative;
     }
 
 }
