related styles changes

--- a/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
@@ -30,6 +30,7 @@
         color: c.$pure-white-color;
 
         &:hover {
+            border-color: c.$dark-red-color;
             background-color: c.$dark-red-color;
         }
     }
