--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -4,15 +4,14 @@
 @use '@sass/variables/variables.colors' as c;
 
 .checkBoxContainer{
-  @include mut.sized(535px,76px);
+  @include mut.sized(357px,76px);
   position: absolute;
   top: 195px;
   left: 50%;
   transform: translateX(-50%);
   @include mut.flexed(row, center, center);
 
-
-  z-index: 2;
+  z-index: 3;
   background: c.$pure-white-color;
   // border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
@@ -28,12 +27,17 @@
   
 }
 
-.checkbox-text{
-  @include mut.with-font(ft.$roboto-font, 500, 20px, normal);
+.checkbox-line{
   line-height: 23px;
   text-align: center;
-  color: c.$normal-darker-gray-color;
   gap: 15px;
+  margin-left: 11%;
+}
+
+.checkbox-text{
+  @include mut.with-font(ft.$roboto-font, 500, 20px, normal);
+  @include mut.positioned-as(relative, $bottom: 2px);
+  color: c.$normal-darker-gray-color;
 }
 .ant-checkbox{
   @include mut.sized(25px, 25px);
