--- a/src/features/StreetcodePage/MapBlock/MapBlock.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/MapBlock.styles.scss
@@ -3,7 +3,8 @@
 
 
 .mapBlockContainer{
-  margin: 10% auto;
+ 
+  @include mut.rem-margined($top: 170px);
    @include mut.positioned-as(relative);
   .leaflet-container {
     z-index: 1;
