--- a/src/features/AdminPage/NewStreetcode/MainBlock/MainBlockAdmin.style.scss
+++ b/src/features/AdminPage/NewStreetcode/MainBlock/MainBlockAdmin.style.scss
@@ -1,14 +1,20 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
+.ant-message {
+    position: absolute;
+    top: 100px !important;
+    width: f.pxToRem(400px) ;
+  }
 .mainblock-add-form{
     @include mut.with-font();
    .ant-form-item-label>label{
         @include mut.with-font();
 
     }
+   
     .maincard-item{
-        width:f.pxToRem(450px) ;
+        width:f.pxToRem(500px) ;
         margin: 10px 0;
     }
     .ant-input{
@@ -29,6 +35,13 @@
     }
     .stretcode-title-people{ 
         width:f.pxToRem(200px) ;
+    }
+    .streetcode-number-container{
+        width:f.pxToRem(400px) ;
+        justify-content: space-between;
+        display: flex;
+        flex-direction: row;
+
     }
     .textarea-teaser{
         height:f.pxToRem(80px);
@@ -57,8 +70,7 @@
             margin-bottom: f.pxToRem(10px);
         }
         .date-picker-qroup-item{
-            width: f.pxToRem(200px);
-          
+            width: f.pxToRem(200px); 
         }
         p{
             margin-left: f.pxToRem(10px);
@@ -97,8 +109,7 @@
             }
         }
     }
-    .tags-block{
-      
+    .tags-block{   
         display: flex;
         flex-direction: row;
         width: f.pxToRem(750px);
@@ -107,7 +118,6 @@
             .tags-select-input{
                 width: 100%;
             }
-
         }
         .device-sizes-list{
             width: 20%;
@@ -120,7 +130,13 @@
             }
         }
     }
-    
+    .file-upload-container{
+        width: f.pxToRem(750px);
+        .photo-uploader-container{
+            display: flex;
+            flex-direction: row;
+        }
+    }
     
 }
 
