Fixes from PO 06.03
Added new textarea and a button for preview from youtube video.

--- a/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextForm.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/TextForm.styles.scss
@@ -37,4 +37,10 @@
         position: relative;
     }
 
+    .ant-form-item-required:before {
+        content: "*";
+        color: red;
+        margin-right: 4px;
+      }
+
 }
