--- a/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
@@ -20,7 +20,7 @@
 
 .searchMenu {
     margin: 10px;
-    @include mut.sized(80%);
+    @include mut.sized(90%);
 
     .searchMenuElement {
         display: inline-block;
@@ -28,10 +28,16 @@
     }
 
     .searchMenuStatusSelected {
-        @include mut.sized(360px);
+        @include mut.sized(400px, 100%);
     }
 
-    .ant-select-selector {
+    .searchMenuElementInput {
+        @include mut.sized(300px, 100%);
+    }
+
+    .ant-select-selector, .ant-input-affix-wrapper {
+        @include mut.with-font($font-size: 16px);
+        
         &:hover {
             border-color: c.$accented-red-color;
         }
@@ -41,7 +47,7 @@
     }
 
     .Button {
-        @include mut.sized(142px, 39px);
+        @include mut.sized(142px, 40px);
         @include mut.flex-centered();
         @include mut.full-rounded(12px);
         @include mut.with-font($font-weight: 500, $font-size: 16px);
